fix: Pawn 움직일 수 없는데 움직여지는 버그 수정